# aeros

./: Cargo.toml  README.md
.github/workflows/: check.yml  release.yml  test.yml.disabled
src/: ai.rs  game.rs  input.rs  main.rs  maps.rs  object.rs  structs.rs  tile.rs
